--- a/index.html
+++ b/index.html
@@ -3,10 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registro de cliente</title>
+    <link rel="stylesheet" href="./src/css/index.css">
 </head>
 <body>
-    <h1>REGISTRO DE CLIENTE</h1>
-    <h2>nombre</h2>
+    <div>
+        <div class="titulo">
+            <h1>Registro de cliente</h1>
+        </div>
+            <section>
+                <div class="container">    
+                    <table>
+                    <tbody>
+                        <tr>
+                            <td>Nombre completo:</td>
+                            <td><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <td>Fecha de nacimiento</td>
+                            <td><input type="date" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <td>Dirección:</td>
+                            <td><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <td>Email:</td>
+                            <td><input type="email" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <td>Ocupación:</td>
+                            <td><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <td>Celular:</td>
+                            <td><input type="number" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <td>DNI:</td>
+                            <td><input type="number" name="" id=""></td>
+                        </tr>
+                    </tbody>
+                    </table>
+                </div>   
+                <button type="submit">Crear cliente</button> 
+        </section>
+    </div>
 </body>
 </html>
