--- a/afiliacion.html
+++ b/afiliacion.html
@@ -23,7 +23,7 @@
                     <option value="">Seguro de tarjetas</option>
                     <option value="">Seguro universitario</option>
                     <option value="">Seguro oncológico</option>
-                    <option value="">Seguro hospitalario</option>
+                    <option value="">Seguro de vida</option>
                     <option value="">Seguro de viajes</option>
                 </select>
                 <label for="plan">Plan</label>
@@ -31,7 +31,6 @@
                     <option value="">Anual</option>
                     <option value="">Semestral</option>
                     <option value="">Mensual</option>
-                    <option value="">Diario</option>
                 </select>
                 <label for="pago">Forma de pago</label>
                 <select name="pago" id="pago">
