--- a/afiliacion.html
+++ b/afiliacion.html
@@ -22,7 +22,7 @@
                 <select name="seguro" id="seguro">
                     <option value="">Seguro de tarjetas</option>
                     <option value="">Seguro universitario</option>
-                    <option value="">Seguro oncológico</option>
+                    <option value="">Seguro de accidentes</option>
                     <option value="">Seguro de vida</option>
                     <option value="">Seguro de viajes</option>
                 </select>
